# txt-timer

./: .dockerignore  Cargo.toml  Dockerfile  README.txt
.github/workflows/: docker-image.yml
src/: main.rs  maximals.rs  timer.rs
tests/: cli.rs
