[package]
name = "txt-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
chrono = "0.4"
colored = "2.0"
regex = "1.6"
itertools = "0.10"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "2.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
