[package]
name = "txt-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.41"
colored = "3.0"
regex = { version = "1.12", default-features = false, features = ["std", "perf"]}
itertools = "0.14"
signal-hook = "0.3.18"

[dev-dependencies]
assert_fs = "1.1"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
